# protobuf_desc_demo

./: Cargo.toml  README.md  build.rs
benches/: my_benchmark.rs
src/: lib.rs  main.rs
