[package]
name = "protobuf_desc_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#protobuf = "3.2.0"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "*"
prost = "*"
prost-reflect = { version = "0.11.4", features = ["serde"] }
vrl = "*"

[build-dependencies]
prost-build = "*"
#protobuf = "3.2.0"
#protobuf-codegen = "*"
#protoc-bin-vendored = "*"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false